bug squashing

--- a/src/components/boards/BoardContainer.scss
+++ b/src/components/boards/BoardContainer.scss
@@ -51,5 +51,6 @@
 .half-card {
     min-width: 100px;
     flex-grow: .35;
-    margin-top: 16px;
+    margin: 16px 0 0 0;
+
 }
