--- a/src/components/boards/BoardNew.scss
+++ b/src/components/boards/BoardNew.scss
@@ -4,7 +4,7 @@
   color: #000;
   height: 25px;
   background-color: #ffffff;
-  border-radius: 15px;
+  border-radius: 20px;
 
   &-Form {
     display: flex;
