--- a/src/components/boards/BoardPersonal.scss
+++ b/src/components/boards/BoardPersonal.scss
@@ -11,7 +11,7 @@
     height: 25px;
 
     background-color: #ffffff;
-    border-radius: 15px;
+    border-radius: 20px;
 
     &-left {
         font-weight: bold;
